ENHANCEMENT: Modify watchlist endpoint to receive one zip file (ALL-287)
HSBC wants to send only one zip file instead of separate 5 files.

### How to call endpoint using Postman

In order to find which file is core, aliases, keywords, checksum etc files must have proper names. According to watchlist files HSBC send us names are:
* world-check.xml.gz - CORE
* world-check-native-aliases.xml.gz - ALIASES
* world-check-keywords.xml - KEYWORDS
* world-check-checksum.xml.gz.md5 - Core checksum
* world-check-native-aliases-checksum.xml.gz.md5 - Aliases checksum

Those files must be packed into a single zip file

![image](/uploads/111d3b82c9189412c1c29cd31ec38bfd/image.png)

### Logs:

![image](/uploads/2b81cbf6424e7ba27428f980e917371f/image.png)

### Memory usage (VisualVM)
I checked memory usage few times. Sometimes it differs, however in average it didn't use more than 500MB

![2021-08-19_07-57](/uploads/fa806527f2f3fec64857c6bb0e8f2f7c/2021-08-19_07-57.png)

Now on minio will be saved new zip file and unpacked xml files only (earlier we also saved gzip files)

![image](/uploads/7a1beea119f32a80509cef4e8d7b6f9e/image.png)

Merged from: https://gitlab.silenteight.com/hsbc-bank/hsbc-bridge/-/merge_requests/315
