# modules/hsbc-bridge/src/main/resources/openapi/openapi.yaml
@@ -234,41 +234,21 @@ paths:
     post:
       summary: Upload watchlist files with up to 1GB limit.
       requestBody:
-        description: 3 watchlist types (core and nameAliases with .gz extension and keywords as .xml) and 2 md5 checksum files.
+        description: One zip file with 5 files inside (3 types of watchlist and 2 md5 files)
         required: true
         content:
           multipart/form-data:
             schema:
               type: object
               properties:
-                coreWatchlist:
-                  type: object
-                  items:
-                    type: string
-                  format: binary
-                nameAliasesWatchlist:
-                  type: object
-                  items:
-                    type: string
-                  format: binary
-                keywordsWatchlist:
-                  type: object
-                  items:
-                    type: string
-                  format: binary
-                coreChecksum:
-                  type: object
-                  items:
-                    type: string
-                  format: binary
-                aliasesChecksum:
+                file:
                   type: object
                   items:
                     type: string
                   format: binary
       responses:
         200:
-          description: The watchlist files were uploaded successfully.
+          description: The watchlist was uploaded successfully.
 
 components:
   schemas:
